# CHIP-8

./: .gitignore  CMakeLists.txt  README.md
include/: App.h
src/: App.cpp  CMakeLists.txt  main.cpp
